@@ -6,6 +6,8 @@ Version 1.4.10 - CVS
 ---------------------
   - Drop obsolete ORDB RBL from filters plugin (#1629398).
   - Fix HTML glitches (#1608798, #1628639, #1521389, #1548394).
+  - Reduce (largely theoretical) chance of reusing existing attachment
+    filenames.
 
 Version 1.4.9a - 3 December 2006
 --------------------------------
